Ensure page slider select width doesn’t overflow

--- a/less/style-editor.less
+++ b/less/style-editor.less
@@ -26,7 +26,8 @@
 		}
 	}
 
-	#vantage-menu-icon-metabox select {
+	#vantage-menu-icon-metabox select, 
+	#vantage-slider-page-slider select {
 		box-sizing: border-box;
 	}
 }
